# pytest-fastcollect

./: .pre-commit-config.yaml  BENCHMARK_RESULTS.md  CHANGELOG.md  COLLECTION_DAEMON_PLAN.md  CONTRIBUTING.md  Cargo.toml  DJANGO_BENCHMARK_RESULTS.md  IMPLEMENTATION_NOTES.md  LAZY_COLLECTION_INVESTIGATION.md  LICENSE  PARALLEL_IMPORT_RESULTS.md  PHASE3_RESULTS.md  PHASE4_AUTO_DAEMON.md  PROCESS_POOL_RESULTS.md  PR_DESCRIPTION.md  PYTEST_ANALYSIS.md  README.md  REALWORLD_BENCHMARKS.md  REAL_WORLD_BENCHMARK_RESULTS.md  RUST_PYTEST_ANALYSIS.md  SCALABILITY_RESULTS.md  SECURITY.md  benchmark.py  benchmark_django.py  benchmark_django_large.py  benchmark_incremental.py  benchmark_lazy_collection.py  benchmark_lazy_collection_comprehensive.py  benchmark_parallel.py  benchmark_phase3.py  benchmark_processes.py  benchmark_real_world.py  benchmark_realworld.py  benchmark_rust_filtering.py  benchmark_scalability_large.py  benchmark_selective_import.py  debug_collector.py  explore_pytest_items.py  pyproject.toml  test_collector.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: CI.yml  publish-testpypi.yml
pytest_fastcollect/: __init__.py  cache.py  constants.py  daemon.py  daemon_client.py  filter.py  lazy_collection.py  plugin.py  socket_strategy.py
src/: lib.rs  test_parse.rs
tests/: test_cache.py  test_daemon.py  test_daemon_client.py  test_filter.py  test_property_based.py  test_selective_import.py
tests/sample_tests/: test_advanced.py  test_basic.py
