[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "pytest-fastcollect"
version = "0.5.0"
description = "A high-performance pytest plugin that replaces test collection with a Rust-based implementation"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]
classifiers = [
    "Framework :: Pytest",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Testing",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.entry-points.pytest11]
fastcollect = "pytest_fastcollect.plugin"

[project.optional-dependencies]
dev = [
    "pytest-benchmark>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks tests as smoke tests for quick validation",
    "regression: marks tests as regression tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
